--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body::before {
     width: 100%;
     height: 100%;
     /* 這裡放背景圖 */
-    background: url('../images/IMG_9097.PNG') no-repeat center center;
+    background: url('../images/background.webp') no-repeat center center;
     background-size: cover;
     z-index: -1; /* 確保它在所有東西的下面 */
     
